Improvement : fix : Prism blocks lines are now wrapped : background has been strictly white, transparent now to see all text in case of wrap

--- a/zip/main.css
+++ b/zip/main.css
@@ -422,3 +422,7 @@ pre[class*="language-"] {
 pre[class*="language-"] > code {
   white-space: pre-wrap;
 }
+
+span .token {
+  background-color: transparent;
+}
